# pi-wasm

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md  dev.sh  package-lock.json  package.json  playwright.config.js
crates/pi-browser/: Cargo.toml
crates/pi-browser/src/: lib.rs
crates/pi-browser/tests/: browser_api.rs
scripts/: dev-server.mjs
tests/e2e/: live-provider.spec.js  pi-wasm.spec.js  run-live-provider.mjs
web/: index.html  main.js  style.css
web/auth/callback/: index.html
